test/corpus/node
This work is licensed under the Creative Commons Attribution-ShareAlike 4.0 International License. To view a copy of this license, visit http://creativecommons.org/licenses/by-sa/4.0/ or send a letter to Creati
ve Commons, PO Box 1866, Mountain View, CA 94042, USA.

============
Test Escline
============

node "arg"

---

    (document
      (node
        (identifier)
        (value
          (string))))

======================
Test Only Line Comment
======================



---

    (document)

========================
Test Arg Raw String Type
========================

node (type)"str"

---

    (document
      (node
        (identifier)
        (value
          (type
            (identifier))
          (string))))

===============
Test Just Space
===============



---

    (document)

==================
Test Block Comment
==================

node "arg"

---

    (document
      (node
        (identifier)
        (value
          (string))))

=============
Test Null Arg
=============

node null

---

    (document
      (node
        (identifier)
        (value
          (keyword))))

==============
Test Node Type
==============

(type)node

---

    (document
      (node
        (type
          (identifier))
        (identifier)))

==================
Test Raw Node Type
==================

(type)node

---

    (document
      (node
        (type
          (identifier))
        (identifier)))

=========================
Test Raw String Backslash
=========================

node "\\n"

---

    (document
      (node
        (identifier)
        (value
          (string
            (escape)))))

====================
Test Blank Node Type
====================

("")node

---

    (document
      (node
        (type
          (identifier
            (string)))
        (identifier)))

===================
Test Slashdash Prop
===================

node "arg"

---

    (document
      (node
        (identifier)
        (value
          (string))))

==============================
Test Newlines In Block Comment
==============================

node "arg"

---

    (document
      (node
        (identifier)
        (value
          (string))))

=====================
Test Quoted Prop Name
=====================

node "0prop"="val"

---

    (document
      (node
        (identifier)
        (prop
          (identifier
            (string))
          (value
            (string)))))

=====================
Test Leading Zero Oct
=====================

node 1

---

    (document
      (node
        (identifier)
        (value
          (number))))

==================
Test Raw Node Name
==================

"\\node"

---

    (document
      (node
        (identifier
          (string
            (escape)))))

==================
Test Prop Hex Type
==================

node key=(type)16

---

    (document
      (node
        (identifier)
        (prop
          (identifier)
          (value
            (type
              (identifier))
            (number)))))

==========================
Test Esc Newline In String
==========================

node "hello\nworld"

---

    (document
      (node
        (identifier)
        (value
          (string
            (escape)))))

===================
Test Blank Arg Type
===================

node ("")10

---

    (document
      (node
        (identifier)
        (value
          (type
            (identifier
              (string)))
          (number))))

====================
Test Blank Prop Type
====================

node key=("")true

---

    (document
      (node
        (identifier)
        (prop
          (identifier)
          (value
            (type
              (identifier
                (string)))
            (keyword
              (boolean))))))

=====================
Test Multiline String
=====================

node " hey\neveryone\nhow goes?\n"

---

    (document
      (node
        (identifier)
        (value
          (string
            (escape)
            (escape)
            (escape)))))

============
Test Hex Int
============

node 207698809136909011942886895

---

    (document
      (node
        (identifier)
        (value
          (number))))

=====================================
Test Slashdash Arg Before Newline Esc
=====================================

node

---

    (document
      (node
        (identifier)))

===========================
Test Only Line Comment Crlf
===========================



---

    (document)

=============================
Test Raw String Multiple Hash
=============================

node "\"#\"##"

---

    (document
      (node
        (identifier)
        (value
          (string
            (escape)
            (escape)))))

========================
Test Hex Int Underscores
========================

node 737894400291

---

    (document
      (node
        (identifier)
        (value
          (number))))

===================
Test Prop True Type
===================

node key=(type)true

---

    (document
      (node
        (identifier)
        (prop
          (identifier)
          (value
            (type
              (identifier))
            (keyword
              (boolean))))))

======================
Test Binary Underscore
======================

node 2

---

    (document
      (node
        (identifier)
        (value
          (number))))

======================
Test Multiline Comment
======================

node "arg"

---

    (document
      (node
        (identifier)
        (value
          (string))))

===========================
Test Slashdash In Slashdash
===========================

node2

---

    (document
      (node
        (identifier)))

===============
Test Zero Float
===============

node 0.0

---

    (document
      (node
        (identifier)
        (value
          (number
            (decimal)))))

==================
Test Trailing Crlf
==================

node

---

    (document
      (node
        (identifier)))

===================
Test Arg Float Type
===================

node (type)2.5

---

    (document
      (node
        (identifier)
        (value
          (type
            (identifier))
          (number
            (decimal)))))

===========================
Test Raw String Hash No Esc
===========================

node "#"

---

    (document
      (node
        (identifier)
        (value
          (string))))

====================
Test Nested Comments
====================

node "arg"

---

    (document
      (node
        (identifier)
        (value
          (string))))

====================================
Test Slashdash Arg After Newline Esc
====================================

node "arg2"

---

    (document
      (node
        (identifier)
        (value
          (string))))

==========================
Test Raw String Just Quote
==========================

node "\""

---

    (document
      (node
        (identifier)
        (value
          (string
            (escape)))))

====================
Test Arg String Type
====================

node (type)"str"

---

    (document
      (node
        (identifier)
        (value
          (type
            (identifier))
          (string))))

===============
Test Bare Emoji
===============

😁 "happy!"

---

    (document
      (node
        (identifier)
        (value
          (string))))

====================
Test Raw String Prop
====================

node_1 prop="arg\\n"
node_2 prop="\"arg\"\\n"
node_3 prop="#\"arg\"#\\n"

---

    (document
      (node
        (identifier)
        (prop
          (identifier)
          (value
            (string
              (escape)))))
      (node
        (identifier)
        (prop
          (identifier)
          (value
            (string
              (escape)
              (escape)
              (escape)))))
      (node
        (identifier)
        (prop
          (identifier)
          (value
            (string
              (escape)
              (escape)
              (escape))))))

=========================
Test Prop Raw String Type
=========================

node key=(type)"str"

---

    (document
      (node
        (identifier)
        (prop
          (identifier)
          (value
            (type
              (identifier))
            (string)))))

============================
Test False Prefix In Bare Id
============================

false_id

---

    (document
      (node
        (identifier)))

==============================
Test Only Line Comment Newline
==============================



---

    (document)

====================
Test Prop False Type
====================

node key=(type)false

---

    (document
      (node
        (identifier)
        (prop
          (identifier)
          (value
            (type
              (identifier))
            (keyword
              (boolean))))))

================
Test Boolean Arg
================

node false true

---

    (document
      (node
        (identifier)
        (value
          (keyword
            (boolean)))
        (value
          (keyword
            (boolean)))))

===============
Test Node False
===============

node false

---

    (document
      (node
        (identifier)
        (value
          (keyword
            (boolean)))))

========================
Test Semicolon Separated
========================

node1
node2

---

    (document
      (node
        (identifier))
      (node
        (identifier)))

=======================================
Test Unusual Bare Id Chars In Quoted Id
=======================================

foo123~!@#$%^&*.:'|?+ "weeee"

---

    (document
      (node
        (identifier)
        (value
          (string))))

====================
Test All Node Fields
====================

node "arg" prop="val" {
    inner_node
}

---

    (document
      (node
        (identifier)
        (value
          (string))
        (prop
          (identifier)
          (value
            (string)))
        (node_children
          (node
            (identifier)))))

==========
Test Octal
==========

node 16434824

---

    (document
      (node
        (identifier)
        (value
          (number))))

=================
Test Escline Node
=================

node1
node2

---

    (document
      (node
        (identifier))
      (node
        (identifier)))

===================
Test Arg False Type
===================

node (type)false

---

    (document
      (node
        (identifier)
        (value
          (type
            (identifier))
          (keyword
            (boolean)))))

==================
Test Arg True Type
==================

node (type)true

---

    (document
      (node
        (identifier)
        (value
          (type
            (identifier))
          (keyword
            (boolean)))))

====================
Test Commented Child
====================

node "arg"

---

    (document
      (node
        (identifier)
        (value
          (string))))

================================
Test Empty Child Different Lines
================================

node

---

    (document
      (node
        (identifier)))

=====================
Test Quoted Prop Type
=====================

node key=("type/")true

---

    (document
      (node
        (identifier)
        (prop
          (identifier)
          (value
            (type
              (identifier
                (string)))
            (keyword
              (boolean))))))

==================
Test Raw Prop Type
==================

node key=(type)true

---

    (document
      (node
        (identifier)
        (prop
          (identifier)
          (value
            (type
              (identifier))
            (keyword
              (boolean))))))

=======================
Test Crlf Between Nodes
=======================

node1
node2

---

    (document
      (node
        (identifier))
      (node
        (identifier)))

===============
Test Just Child
===============

node {
    inner_node
}

---

    (document
      (node
        (identifier)
        (node_children
          (node
            (identifier)))))

============
Test Only Cr
============



---

    (document)

===================
Test Commented Node
===================

node_2

---

    (document
      (node
        (identifier)))

===============
Test String Arg
===============

node "arg"

---

    (document
      (node
        (identifier)
        (value
          (string))))

=============================
Test Preserve Duplicate Nodes
=============================

node
node

---

    (document
      (node
        (identifier))
      (node
        (identifier)))

========================
Test Slashdash Full Node
========================



---

    (document)

=================
Test Just Newline
=================



---

    (document)

============================
Test Slashdash Repeated Prop
============================

node arg="correct"

---

    (document
      (node
        (identifier)
        (prop
          (identifier)
          (value
            (string)))))

=================
Test Repeated Arg
=================

node "arg" "arg"

---

    (document
      (node
        (identifier)
        (value
          (string))
        (value
          (string))))

=============================
Test Block Comment After Node
=============================

node "arg"

---

    (document
      (node
        (identifier)
        (value
          (string))))

================
Test Empty Child
================

node

---

    (document
      (node
        (identifier)))

======================
Test Negative Exponent
======================

node 1.0E-10

---

    (document
      (node
        (identifier)
        (value
          (number
            (decimal)
            (exponent)))))

============================
Test Null Prefix In Prop Key
============================

node null_id=1

---

    (document
      (node
        (identifier)
        (prop
          (identifier)
          (value
            (number)))))

===========================
Test Underscore In Exponent
===========================

node 1.0E-100

---

    (document
      (node
        (identifier)
        (value
          (number
            (decimal)
            (exponent)))))

================
Test Single Prop
================

node prop="val"

---

    (document
      (node
        (identifier)
        (prop
          (identifier)
          (value
            (string)))))

==========================
Test Empty Child Same Line
==========================

node

---

    (document
      (node
        (identifier)))

==========================
Test Empty Quoted Prop Key
==========================

node ""="empty"

---

    (document
      (node
        (identifier)
        (prop
          (identifier
            (string))
          (value
            (string)))))

===================
Test Prop Zero Type
===================

node key=(type)0

---

    (document
      (node
        (identifier)
        (prop
          (identifier)
          (value
            (type
              (identifier))
            (number)))))

==============
Test Same Args
==============

node "whee" "whee"

---

    (document
      (node
        (identifier)
        (value
          (string))
        (value
          (string))))

=================
Test Just Node Id
=================

node

---

    (document
      (node
        (identifier)))

==================
Test Commented Arg
==================

node "arg2"

---

    (document
      (node
        (identifier)
        (value
          (string))))

===========
Test Binary
===========

node 2

---

    (document
      (node
        (identifier)
        (value
          (number))))

===========================
Test Empty Child Whitespace
===========================

node

---

    (document
      (node
        (identifier)))

=======================
Test Raw String Newline
=======================

node "\nhello\nworld\n"

---

    (document
      (node
        (identifier)
        (value
          (string
            (escape)
            (escape)
            (escape)))))

===================
Test Prop Null Type
===================

node key=(type)null

---

    (document
      (node
        (identifier)
        (prop
          (identifier)
          (value
            (type
              (identifier))
            (keyword)))))

==========================
Test Semicolon After Child
==========================

node {
    childnode
}

---

    (document
      (node
        (identifier)
        (node_children
          (node
            (identifier)))))

===================================
Test Slashdash Only Node With Space
===================================



---

    (document)

===============================
Test Binary Trailing Underscore
===============================

node 2

---

    (document
      (node
        (identifier)
        (value
          (number))))

=============
Test Arg Type
=============

node (type)"arg"

---

    (document
      (node
        (identifier)
        (value
          (type
            (identifier))
          (string))))

========
Test Hex
========

node 12379813812177893520

---

    (document
      (node
        (identifier)
        (value
          (number))))

==========================
Test Esc Unicode In String
==========================

node "hello\nworld"

---

    (document
      (node
        (identifier)
        (value
          (string
            (escape)))))

====================
Test Same Name Nodes
====================

node
node

---

    (document
      (node
        (identifier))
      (node
        (identifier)))

===================
Test Commented Line
===================

node_2

---

    (document
      (node
        (identifier)))

===================
Test Raw String Arg
===================

node_1 "arg\\n"
node_2 "\"arg\\n\"and stuff"
node_3 "#\"arg\\n\"#and stuff"

---

    (document
      (node
        (identifier)
        (value
          (string
            (escape))))
      (node
        (identifier)
        (value
          (string
            (escape)
            (escape)
            (escape))))
      (node
        (identifier)
        (value
          (string
            (escape)
            (escape)
            (escape)))))

===========================
Test Arg And Prop Same Name
===========================

node "arg" arg="val"

---

    (document
      (node
        (identifier)
        (value
          (string))
        (prop
          (identifier)
          (value
            (string)))))

====================
Test Nested Children
====================

node1 {
    node2 {
        node
    }
}

---

    (document
      (node
        (identifier)
        (node_children
          (node
            (identifier)
            (node_children
              (node
                (identifier)))))))

=======================
Test Semicolon In Child
=======================

node1 {
    node2
}

---

    (document
      (node
        (identifier)
        (node_children
          (node
            (identifier)))))

===================================
Test Nested Multiline Block Comment
===================================

node "arg"

---

    (document
      (node
        (identifier)
        (value
          (string))))

=====================
Test Quoted Node Name
=====================

"0node"

---

    (document
      (node
        (identifier
          (string))))

============================
Test Int Multiple Underscore
============================

node 1234

---

    (document
      (node
        (identifier)
        (value
          (number))))

===============
Test Single Arg
===============

node "arg"

---

    (document
      (node
        (identifier)
        (value
          (string))))

======================
Test Positive Exponent
======================

node 1.0E+10

---

    (document
      (node
        (identifier)
        (value
          (number
            (decimal)
            (exponent)))))

========================
Test Parse All Arg Types
========================

node 1 1.0 1.0E+10 1.0E-10 1 7 2 "arg" "arg\\\\" true false null

---

    (document
      (node
        (identifier)
        (value
          (number))
        (value
          (number
            (decimal)))
        (value
          (number
            (decimal)
            (exponent)))
        (value
          (number
            (decimal)
            (exponent)))
        (value
          (number))
        (value
          (number))
        (value
          (number))
        (value
          (string))
        (value
          (string
            (escape)
            (escape)))
        (value
          (keyword
            (boolean)))
        (value
          (keyword
            (boolean)))
        (value
          (keyword))))

=================
Test Numeric Prop
=================

node prop=10.0

---

    (document
      (node
        (identifier)
        (prop
          (identifier)
          (value
            (number
              (decimal))))))

=======================
Test Sci Notation Large
=======================

node prop=1.23E+1000

---

    (document
      (node
        (identifier)
        (prop
          (identifier)
          (value
            (number
              (decimal)
              (exponent))))))

==============
Test Node True
==============

node true

---

    (document
      (node
        (identifier)
        (value
          (keyword
            (boolean)))))

============================
Test True Prefix In Prop Key
============================

node true_id=1

---

    (document
      (node
        (identifier)
        (prop
          (identifier)
          (value
            (number)))))

================
Test String Prop
================

node prop="val"

---

    (document
      (node
        (identifier)
        (prop
          (identifier)
          (value
            (string)))))

==============================
Test Slashdash Node With Child
==============================



---

    (document)

============================
Test Slashdash Node In Child
============================

node1

---

    (document
      (node
        (identifier)))

==============================
Test Asterisk In Block Comment
==============================

node

---

    (document
      (node
        (identifier)))

=============
Test Zero Arg
=============

node 0

---

    (document
      (node
        (identifier)
        (value
          (number))))

====================
Test Quoted Arg Type
====================

node ("type/")10

---

    (document
      (node
        (identifier)
        (value
          (type
            (identifier
              (string)))
          (number))))

=====================
Test Raw String Quote
=====================

node "a\"b"

---

    (document
      (node
        (identifier)
        (value
          (string
            (escape)))))

=========================
Test Escline Line Comment
=========================

node "arg" "arg2\n"

---

    (document
      (node
        (identifier)
        (value
          (string))
        (value
          (string
            (escape)))))

===================
Test Quoted Numeric
===================

node prop="10.0"

---

    (document
      (node
        (identifier)
        (prop
          (identifier)
          (value
            (string)))))

==============================
Test Block Comment Before Node
==============================

node

---

    (document
      (node
        (identifier)))

=====================
Test Quoted Node Type
=====================

("type/")node

---

    (document
      (node
        (type
          (identifier
            (string)))
        (identifier)))

==========
Test Emoji
==========

node "😀"

---

    (document
      (node
        (identifier)
        (value
          (string))))

=======================================
Test Block Comment Before Node No Space
=======================================

node

---

    (document
      (node
        (identifier)))

==================
Test Arg Zero Type
==================

node (type)0

---

    (document
      (node
        (identifier)
        (value
          (type
            (identifier))
          (number))))

=====================
Test Prop String Type
=====================

node key=(type)"str"

---

    (document
      (node
        (identifier)
        (prop
          (identifier)
          (value
            (type
              (identifier))
            (string)))))

==================
Test Arg Null Type
==================

node (type)null

---

    (document
      (node
        (identifier)
        (value
          (type
            (identifier))
          (keyword))))

========================
Test Underscore In Octal
========================

node 342391

---

    (document
      (node
        (identifier)
        (value
          (number))))

==============
Test Tab Space
==============

node

---

    (document
      (node
        (identifier)))

==============
Test Prop Type
==============

node key=(type)true

---

    (document
      (node
        (identifier)
        (prop
          (identifier)
          (value
            (type
              (identifier))
            (keyword
              (boolean))))))

===========================
Test Slashdash Raw Prop Key
===========================

node

---

    (document
      (node
        (identifier)))

====================
Test Multiline Nodes
====================

node "arg1" "arg2"

---

    (document
      (node
        (identifier)
        (value
          (string))
        (value
          (string))))

=====================
Test Hex Leading Zero
=====================

node 1

---

    (document
      (node
        (identifier)
        (value
          (number))))

==============================
Test Trailing Underscore Octal
==============================

node 83

---

    (document
      (node
        (identifier)
        (value
          (number))))

========================
Test Slashdash Only Node
========================



---

    (document)

=========================
Test Semicolon Terminated
=========================

node1

---

    (document
      (node
        (identifier)))

====================
Test Leading Newline
====================

node

---

    (document
      (node
        (identifier)))

=============================
Test False Prefix In Prop Key
=============================

node false_id=1

---

    (document
      (node
        (identifier)
        (prop
          (identifier)
          (value
            (number)))))

================
Test All Escapes
================

node "\"\\/\b\f\n\r\t"

---

    (document
      (node
        (identifier)
        (value
          (string
            (escape)
            (escape)
            (escape)
            (escape)
            (escape)
            (escape)
            (escape)))))

===========
Test R Node
===========

r "arg"

---

    (document
      (node
        (identifier)
        (value
          (string))))

==========================
Test Slashdash Empty Child
==========================

node

---

    (document
      (node
        (identifier)))

====================
Test Slashdash Child
====================

node

---

    (document
      (node
        (identifier)))

=================
Test Negative Int
=================

node -10 prop=-15

---

    (document
      (node
        (identifier)
        (value
          (number))
        (prop
          (identifier)
          (value
            (number)))))

===========================
Test True Prefix In Bare Id
===========================

true_id

---

    (document
      (node
        (identifier)))

=====================
Test Leading Zero Int
=====================

node 11

---

    (document
      (node
        (identifier)
        (value
          (number))))

=============
Test Zero Int
=============

node 0

---

    (document
      (node
        (identifier)
        (value
          (number))))

============================
Test Trailing Underscore Hex
============================

node 1194684

---

    (document
      (node
        (identifier)
        (value
          (number))))

=====================
Test Empty String Arg
=====================

node ""

---

    (document
      (node
        (identifier)
        (value
          (string))))

=================
Test Raw Arg Type
=================

node (type)true

---

    (document
      (node
        (identifier)
        (value
          (type
            (identifier))
          (keyword
            (boolean)))))

========================
Test No Decimal Exponent
========================

node 1E+10

---

    (document
      (node
        (identifier)
        (value
          (number
            (exponent)))))

==========
Test Empty
==========



---

    (document)

================
Test Numeric Arg
================

node 15.7

---

    (document
      (node
        (identifier)
        (value
          (number
            (decimal)))))

==========================
Test Newline Between Nodes
==========================

node1
node2

---

    (document
      (node
        (identifier))
      (node
        (identifier)))

===================
Test Negative Float
===================

node -1.0 key=-10.0

---

    (document
      (node
        (identifier)
        (value
          (number
            (decimal)))
        (prop
          (identifier)
          (value
            (number
              (decimal))))))

======================
Test Underscore In Int
======================

node 10

---

    (document
      (node
        (identifier)
        (value
          (number))))

==============
Test Two Nodes
==============

node1
node2

---

    (document
      (node
        (identifier))
      (node
        (identifier)))

=================
Test Boolean Prop
=================

node prop1=true prop2=false

---

    (document
      (node
        (identifier)
        (prop
          (identifier)
          (value
            (keyword
              (boolean))))
        (prop
          (identifier)
          (value
            (keyword
              (boolean))))))

==========================
Test Block Comment Newline
==========================



---

    (document)

=======================
Test Just Block Comment
=======================



---

    (document)

=============================
Test Unusual Chars In Bare Id
=============================

foo123~!@#$%^&*.:'|?+ "weeee"

---

    (document
      (node
        (identifier)
        (value
          (string))))

=================
Test Arg Hex Type
=================

node (type)16

---

    (document
      (node
        (identifier)
        (value
          (type
            (identifier))
          (number))))

========================
Test Leading Zero Binary
========================

node 1

---

    (document
      (node
        (identifier)
        (value
          (number))))

=========================
Test Empty Quoted Node Id
=========================

"" "arg"

---

    (document
      (node
        (identifier
          (string))
        (value
          (string))))

===========================
Test Null Prefix In Bare Id
===========================

null_id

---

    (document
      (node
        (identifier)))

==================
Test Repeated Prop
==================

node prop=11

---

    (document
      (node
        (identifier)
        (prop
          (identifier)
          (value
            (number)))))

=======================
Test Sci Notation Small
=======================

node prop=1.23E-1000

---

    (document
      (node
        (identifier)
        (prop
          (identifier)
          (value
            (number
              (decimal)
              (exponent))))))

====================
Test Prop Float Type
====================

node key=(type)2.5E+10

---

    (document
      (node
        (identifier)
        (prop
          (identifier)
          (value
            (type
              (identifier))
            (number
              (decimal)
              (exponent))))))

========================
Test Preserve Node Order
========================

node2
node5
node1

---

    (document
      (node
        (identifier))
      (node
        (identifier))
      (node
        (identifier)))

========================
Test Underscore In Float
========================

node 11.0

---

    (document
      (node
        (identifier)
        (value
          (number
            (decimal)))))

==============================
Test Raw String Just Backslash
==============================

node "\\"

---

    (document
      (node
        (identifier)
        (value
          (string
            (escape)))))

===================
Test Commented Prop
===================

node "arg"

---

    (document
      (node
        (identifier)
        (value
          (string))))

=========================
Test Nested Block Comment
=========================

node "arg"

---

    (document
      (node
        (identifier)
        (value
          (string))))

==============
Test Null Prop
==============

node prop=null

---

    (document
      (node
        (identifier)
        (prop
          (identifier)
          (value
            (keyword)))))

==============================
Test Slashdash Negative Number
==============================

node 2.0

---

    (document
      (node
        (identifier)
        (value
          (number
            (decimal)))))

===========================
Test Underscore In Fraction
===========================

node 1.02

---

    (document
      (node
        (identifier)
        (value
          (number
            (decimal)))))

=================
Test Positive Int
=================

node 10

---

    (document
      (node
        (identifier)
        (value
          (number))))

==============================
Test Semicolon Separated Nodes
==============================

node1
node2

---

    (document
      (node
        (identifier))
      (node
        (identifier)))


